tablet: Remember secondary users bounds when enter/exit tablet mode.

See bug for more information. TabletModeWindowManager is responsible
for returning the window to its clamshell bounds, but it does not track
window on a secondary user since those windows are not visible. They
still get maximized because TabletModeWindowManager becomes aware of
them when switching users.

This approach adds all windows managed by MultiUserWindowManagerCros
when tablet mode is started.

Test: unit_tests MultiUserWindowManagerChromeOSTest.WindowBoundsAfterTabletMode
Bug: 733639
Change-Id: I14c5e940fe1337789e987e19d8336f0a06e03735
Reviewed-on: https://chromium-review.googlesource.com/1229178
Reviewed-by: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592575}
Former-commit-id: 1287062f782551b52676553d89199811d0da3eb4